Fixed Projects & Links wrapper to not cut off

--- a/app/globals.css
+++ b/app/globals.css
@@ -179,9 +179,9 @@
 
 .projects-wrapper {
   display: grid;
-  grid-template-columns: repeat(2, 200px);
+  grid-template-columns: repeat(2, 180px);
   justify-content: center;
-  gap: 20px;
+  gap: 10px;
   margin-top: 20px;
   border-radius: 12%;
   transition: .5s;
@@ -298,7 +298,7 @@
 
 .links-group {
   display: grid;
-  grid-template-columns: repeat(2, 200px);
+  grid-template-columns: repeat(2, 180px);
   gap: 20px;
   justify-content: center;
   flex-direction: column;
